--- a/ambiente/sensorDash/dashboard/templates/dashboard/index.html
+++ b/ambiente/sensorDash/dashboard/templates/dashboard/index.html
@@ -12,6 +12,7 @@
 <script src="{% static "js/legends.js" %}" type="text/javascript"></script>
 <script type="text/javascript">
 $( document ).ready(function() {
+   
     var data = {
         labels: ['1', '5', '10', '15', '20', '25', '30'],
         datasets: [
@@ -26,7 +27,7 @@ $( document ).ready(function() {
                 data: {{ 30_day_registrations }}
             },
             {
-                label: "Humidade",
+                label: "Umidade",
                 fillColor: "rgba(151,187,205,0.2)",
                 strokeColor: "rgba(151,187,205,1)",
                 pointColor: "rgba(151,187,205,1)",
@@ -37,6 +38,7 @@ $( document ).ready(function() {
             }
         ]
     };
+    
     var ctx = document.getElementById("myChart").getContext("2d");
     var myLineChart = new Chart(ctx).Line(data);
     legend(document.getElementById('legendDiv'), data);
@@ -71,12 +73,13 @@ $( document ).ready(function() {
 <h1>Dashboard</h1>
 <div class="divleft"> 
     <h2>Temperatura e Umidade</h2>
-    <canvas id="myChart" width="500" height="300"></canvas>
+    <canvas id="myChart" width="500" height="300"></canvas>   
     <div id="legendDiv"></div>
     <h2>Luminosidade</h2>
     <canvas id="luminosityChart" width="500" height="300"></canvas>
     <div id="legendDiv2"></div>
 </div> 
+ <div id="chartjs-tooltip"></div>
 {% endblock %}
 
 
