--- a/ambiente/sensorDash/dashboard/templates/dashboard/index.html
+++ b/ambiente/sensorDash/dashboard/templates/dashboard/index.html
@@ -4,17 +4,49 @@
 {% load staticfiles %}
 
 <!--CSS-->
-<link rel="stylesheet" href="{% static "css/main.css" %}">
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
 
 <!--JS-->
 <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
-<script src="{% static "js/legends.js" %}" type="text/javascript"></script>
+<script src="{% static 'js/legends.js' %}" type="text/javascript"></script>
 <script type="text/javascript">
 $( document ).ready(function() {
    
+    var chartoptions =
+    {
+        customTooltips: function ( tooltip )
+        {
+            var tooltipEl = $( "#chartjs-tooltip" );
+            if ( !tooltip )
+            {
+                tooltipEl.css( {
+                    opacity: 0
+                } );
+                return;
+            }
+
+            tooltipEl.removeClass( 'above below' );
+            tooltipEl.addClass( tooltip.yAlign );
+
+            // split out the label and value and make your own tooltip here
+            var parts = tooltip.text.split( ":" );
+            var innerHtml = '<span>' + parts[0].trim() + '</span> : <span><b>' + parts[1].trim() + '</b></span>';
+            tooltipEl.html( innerHtml );
+
+            tooltipEl.css( {
+                opacity: 1,
+                left: tooltip.chart.canvas.offsetLeft + tooltip.x + 'px',
+                top: tooltip.chart.canvas.offsetTop + tooltip.y + 'px',
+                fontFamily: tooltip.fontFamily,
+                fontSize: tooltip.fontSize,
+                fontStyle: tooltip.fontStyle
+            } );
+        }
+    }
+
     var data = {
-        labels: ['1', '5', '10', '15', '20', '25', '30'],
+        labels: {{ chart_labels | safe }},
         datasets: [
             {
                 label: "Temperatura",
@@ -24,7 +56,7 @@ $( document ).ready(function() {
                 pointStrokeColor: "#fff",
                 pointHighlightFill: "#fff",
                 pointHighlightStroke: "rgba(255,0,0,1)",
-                data: {{ temperature_values }}
+                data: {{ temperature_values | safe  }}
             },
             {
                 label: "Umidade",
@@ -34,22 +66,13 @@ $( document ).ready(function() {
                 pointStrokeColor: "#fff",
                 pointHighlightFill: "#fff",
                 pointHighlightStroke: "rgba(151,187,205,1)",
-                data: [28, 48, 40, 19, 86, 27, 90]
+                data: {{ humidity_values | safe  }}
             }
         ]
     };
-    function decodeHtml(html) {
-        var txt = document.createElement("textarea");
-        txt.innerHTML = html;
-        return txt.value;
-    }
-    
-    var ctx = document.getElementById("myChart").getContext("2d");
-    var myLineChart = new Chart(ctx).Line(data);
-    legend(document.getElementById('legendDiv'), data);
 
     var dataLuminosidade = {
-        labels: ['1', '5', '10', '15', '20', '25', '30'],
+        labels: {{ chart_labels | safe }},
         datasets: [
             {
                 label: "Luminosidade",
@@ -59,16 +82,44 @@ $( document ).ready(function() {
                 pointStrokeColor: "#fff",
                 pointHighlightFill: "#fff",
                 pointHighlightStroke: "rgba(255,128,0,1)",
-                data: [65, 59, 80, 81, 56, 55, 40]
+                data: {{ luminosity_values | safe  }}
             }
         ]
     };
-    var ctx2 = document.getElementById("luminosityChart").getContext("2d");
-    var myLineChart2 = new Chart(ctx2).Line(dataLuminosidade);
+    var ctx = document.getElementById("myChart").getContext("2d");
+    var myLineChart = new Chart(ctx).Line(data, {
+        customTooltips: function (tooltip) {
+            var tooltipEl = $('#chartjs-tooltip');
+            
+            if (!tooltip) {
+                tooltipEl.css({
+                    opacity: 0
+                });
+                return;
+            }
+            
+            tooltipEl.removeClass('above below');
+            tooltipEl.addClass(tooltip.yAlign);
+            
+            // split out the label and value and make your own tooltip here
+            var parts = tooltip.text.split(":");
+            var innerHtml = '<span>' + parts[0].trim() + '</span> : <span><b>' + parts[1].trim() + '</b></span>';
+            tooltipEl.html(innerHtml);
+            
+            tooltipEl.css({
+                opacity: 1,
+                left: tooltip.chart.canvas.offsetLeft + tooltip.x + 'px',
+                top: tooltip.chart.canvas.offsetTop + tooltip.y + 'px',
+                fontFamily: tooltip.fontFamily,
+                fontSize: tooltip.fontSize,
+                fontStyle: tooltip.fontStyle,
+            });
+        }
+    });
+    ctx = document.getElementById("luminosityChart").getContext("2d");
+    myLineChart = new Chart(ctx).Line(dataLuminosidade, chartoptions);
+    legend(document.getElementById('legendDiv'), data); 
     legend(document.getElementById('legendDiv2'), dataLuminosidade);
-
-
-
 
 });
 </script>
@@ -78,20 +129,14 @@ $( document ).ready(function() {
 <h1>Dashboard</h1>
 <div class="divleft"> 
     <h2>Temperatura e Umidade</h2>
-    <canvas id="myChart" width="500" height="300"></canvas>   
+    <canvas id="myChart" width="500" height="300"></canvas> 
+    <div id="chartjs-tooltip"></div>  
     <div id="legendDiv"></div>
     <h2>Luminosidade</h2>
     <canvas id="luminosityChart" width="500" height="300"></canvas>
     <div id="legendDiv2"></div>
 </div> 
- <div id="chartjs-tooltip"></div>
- 
-{% with temperature_values as list %}
-    {% for i in temperature_values.split %}
-        {{ i }}<br>
-    {% endfor %}
-{% endwith %}
- 
+
 {% endblock %}
 
 
