--- a/ambiente/sensorDash/dashboard/static/css/main.css
+++ b/ambiente/sensorDash/dashboard/static/css/main.css
@@ -5,11 +5,58 @@
     margin-right: 5px;
 } 
 
+.clear {
+    clear: both;
+}
 .divleft {
     float: left;
 }
+.divright {
+    float: right;
+}
+
+.divForm {
+    width: 300px;
+    margin-top: -875px;
+    padding-left: 500px;
+}
+
+.ng-scope .ng-isolate-scope input[type=text] {
+    width: 100px
+}
+.col-md-6 {
+    width: 170px;
+}
+
+
+input[type=date] {
+    line-height: 22px;
+    border: 1px solid #417690;
+    border-radius: 4px;
+    border-color: #417690;
+    padding: 5px 6px;
+    margin-top: 0;
+    webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+input[type="text"]:focus,
+input[type=date]:focus,
+input[type="text"]:focus {
+    border-color: #f5dd5d;
+}
+
+.has-error .form-control {
+    border-color: #417690;
+ }
+
+.has-error .form-control:focus {
+    border-color: #f5dd5d;
+    webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #f5dd5d;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #f5dd5d;
+ }
 #content-related{
-    /*margin-top: -390px;*/
+    margin-top: -600px;
 } 
 #chartjs-tooltip {
      opacity: 0;
