--- a/ambiente/sensorDash/dashboard/templates/dashboard/index.html
+++ b/ambiente/sensorDash/dashboard/templates/dashboard/index.html
@@ -26,7 +26,7 @@
 </script>
 
 <!--JS-->
-<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js" type="text/javascript"></script>
+<script src="{% static 'js/Chart.min.js' %}" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
 <script src="{% static 'js/legends.js' %}" type="text/javascript"></script>
 <script type="text/javascript">
@@ -51,7 +51,8 @@ function printCharts(value) {
         console.log(humidity_values);
         console.log(luminosity_values);
         console.log(chart_labels);
-
+        
+        
         var chartoptions =
         {
             customTooltips: function ( tooltip )
@@ -129,40 +130,58 @@ function printCharts(value) {
                 }
             ]
         };
-        var ctx = document.getElementById("myChart").getContext("2d");
-        var myLineChart = new Chart(ctx).Line(data, {
-            customTooltips: function (tooltip) {
-                var tooltipEl = $('#chartjs-tooltip');
-                
-                if (!tooltip) {
-                    tooltipEl.css({
-                        opacity: 0
-                    });
-                    return;
+
+        var dataAll = {
+            labels: chart_labels,
+            // labels: {{ chart_labels | safe }},
+            datasets: [
+                {
+                    label: "Temperatura",
+                    fillColor: "rgba(255,0,0,0.2)",
+                    strokeColor: "rgba(255,0,0,1)",
+                    pointColor: "rgba(255,0,0,1)",
+                    pointStrokeColor: "#fff",
+                    pointHighlightFill: "#fff",
+                    pointHighlightStroke: "rgba(255,0,0,1)",
+                    data: temperature_values
+                    // data: {{ temperature_values | safe  }}
+                },
+                {
+                    label: "Umidade",
+                    fillColor: "rgba(151,187,205,0.2)",
+                    strokeColor: "rgba(151,187,205,1)",
+                    pointColor: "rgba(151,187,205,1)",
+                    pointStrokeColor: "#fff",
+                    pointHighlightFill: "#fff",
+                    pointHighlightStroke: "rgba(151,187,205,1)",
+                    data: humidity_values
+                    // data: {{ humidity_values | safe  }}
+                }, 
+                {
+                    label: "Luminosidade",
+                    fillColor: "rgba(255,128,0,0.2)",
+                    strokeColor: "rgba(255,128,0,1)",
+                    pointColor: "rgba(255,128,0,1)",
+                    pointStrokeColor: "#fff",
+                    pointHighlightFill: "#fff",
+                    pointHighlightStroke: "rgba(255,128,0,1)",
+                    data: luminosity_values
+                    // data: {{ luminosity_values | safe  }}
                 }
-                
-                tooltipEl.removeClass('above below');
-                tooltipEl.addClass(tooltip.yAlign);
-                
-                // split out the label and value and make your own tooltip here
-                var parts = tooltip.text.split(":");
-                var innerHtml = '<span>' + parts[0].trim() + '</span> : <span><b>' + parts[1].trim() + '</b></span>';
-                tooltipEl.html(innerHtml);
-                
-                tooltipEl.css({
-                    opacity: 1,
-                    left: tooltip.chart.canvas.offsetLeft + tooltip.x + 'px',
-                    top: tooltip.chart.canvas.offsetTop + tooltip.y + 'px',
-                    fontFamily: tooltip.fontFamily,
-                    fontSize: tooltip.fontSize,
-                    fontStyle: tooltip.fontStyle,
-                });
-            }
-        });
+            ]
+        };
+        var ctx = document.getElementById("myChart").getContext("2d");
+        var myLineChart = new Chart(ctx).Line(data);
+
         ctx = document.getElementById("luminosityChart").getContext("2d");
-        myLineChart = new Chart(ctx).Line(dataLuminosidade, {animationEasing: "linear"});
+        myLineChart = new Chart(ctx).Line(dataLuminosidade);
+
+        ctx = document.getElementById("ChartAll").getContext("2d");
+        myLineChart = new Chart(ctx).Line(dataAll);        
+        
         legend(document.getElementById('legendDiv'), data); 
         legend(document.getElementById('legendDiv2'), dataLuminosidade);
+        legend(document.getElementById('legendDivAll'), dataAll);
         document.getElementById('initialDate').valueAsDate = new Date();
         document.getElementById('finalDate').valueAsDate = new Date();
 
@@ -188,6 +207,9 @@ $( document ).ready(function() {
     <h2>Luminosidade</h2>
     <canvas id="luminosityChart" width="500" height="300"></canvas>
     <div id="legendDiv2"></div>
+    <h2>Crossover</h2>
+    <canvas id="ChartAll" width="500" height="300"></canvas>
+    <div id="legendDivAll"></div>
 </div>
 <div class="clear"></div>
 <div class="divright divForm">
