--- a/ambiente/sensorDash/dashboard/templates/dashboard/index.html
+++ b/ambiente/sensorDash/dashboard/templates/dashboard/index.html
@@ -246,7 +246,7 @@ $( document ).ready(function() {
             <tr>
                 <td></td>
                 <td class="divright" style="margin-right: -28px; margin-top: 15px;">
-                    <button type="button" class="btn btn-primary">Filtrar</button>
+                    <button type="submit" class="btn btn-primary">Filtrar</button>
                 </td>
             </tr>
         </table>
