add filter form

--- a/ambiente/sensorDash/dashboard/templates/dashboard/index.html
+++ b/ambiente/sensorDash/dashboard/templates/dashboard/index.html
@@ -224,9 +224,10 @@ $( document ).ready(function() {
                     <td>
                         <div class='col-md-6 col-md-offset-3'>
                           <h4>Hora inicial</h4>
-                          <timepicker-pop input-time="initialTime" class="input-group"
+                          <!-- <timepicker-pop input-time="initialTime" class="input-group"
                             show-meridian='showMeridian'>
-                          </timepicker-pop>
+                          </timepicker-pop> -->
+                          <input type="time" name="initialTime" id="initialTime"/><br/>
                         </div>
                     </td>
                 </tr>
@@ -238,9 +239,10 @@ $( document ).ready(function() {
                     <td>
                         <div class='col-md-6 col-md-offset-3'>
                           <h4>Hora final</h4>
-                          <timepicker-pop input-time="finalTime" class="input-group"
+                          <!-- <timepicker-pop input-time="finalTime" class="input-group"
                             show-meridian='showMeridian'>
-                          </timepicker-pop>
+                          </timepicker-pop> -->
+                          <input type="time" name="finalTime" id="finalTime"/><br/>
                         </div>
                     </td>
                 </tr>
