add filter form

--- a/ambiente/sensorDash/dashboard/templates/dashboard/index.html
+++ b/ambiente/sensorDash/dashboard/templates/dashboard/index.html
@@ -47,10 +47,10 @@ function printCharts(value) {
 
     getUrl = "/dashboard_data/";
 
-    console.log(initDate);
-    console.log(initTime);
-    console.log(endDate);
-    console.log(endTime);
+    // console.log(initDate);
+    // console.log(initTime);
+    // console.log(endDate);
+    // console.log(endTime);
 
     if (initDate && initTime && endDate && endTime) {
         getUrl += "?initialDate=" + initDate + "&initialTime=" + initTime + "&finalDate=" + endDate + "&finalTime=" + endTime;
@@ -262,12 +262,12 @@ $( document ).ready(function() {
                         </div>
                     </td>
                 </tr>
-                <tr>
+                <!-- <tr>
                     <td></td>
                     <td class="divright" style="margin-right: -28px; margin-top: 15px;">
                         <button type="submit" class="btn btn-primary">Filtrar</button>
                     </td>
-                </tr>
+                </tr> -->
             </table>
         </div>
     </form>
